[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/RequestBuilder.gd" type="Script" id=1]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 24.0

[node name="PathLabel" type="Label" parent="HBoxContainer"]
offset_top = 5.0
offset_right = 32.0
offset_bottom = 19.0
size_flags_vertical = 6
text = "Path3D:"

[node name="PathInput" type="LineEdit" parent="HBoxContainer"]
offset_left = 36.0
offset_right = 1024.0
offset_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "/Client/GetTitleData"

[node name="TableContainer" type="VBoxContainer" parent="."]
offset_top = 28.0
offset_right = 1024.0
offset_bottom = 28.0

[node name="AddLineButton" type="Button" parent="."]
offset_top = 32.0
offset_right = 1024.0
offset_bottom = 52.0
text = "Add Body Parameter Line"

[node name="SubmitButton" type="Button" parent="."]
offset_top = 56.0
offset_right = 1024.0
offset_bottom = 76.0
text = "Submit"

[node name="Response" type="RichTextLabel" parent="."]
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="."]
offset_top = 580.0
offset_right = 1024.0
offset_bottom = 600.0
text = "Back"

[connection signal="pressed" from="AddLineButton" to="." method="_on_AddLineButton_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
